--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ verbose = true  # You can toggle this flag to enable verbose logging
 scheduled_time_ratio = [0.1, 0.5, 0.8]
 datasets_dir = "examples"
 # datasets = ["fakedata", "square@retrofit"]
-datasets = ["alibaba@druid"]
+datasets = ["Deeplearning4j","LexisNexis","Druid","Fatjson"]
 
 # WTS
 #datasets_dir = "examples/core@dune-common"
@@ -24,7 +24,7 @@ datasets = ["alibaba@druid"]
 experiment_dir = "results/experiments/"
 rewards = ["RNFail", "TimeRank"]
 #policies = ['Random', 'Greedy', 'EpsilonGreedy', 'UCB', 'FRRMAB', 'LinUCB', 'SWLinUCB']
-policies = ['Random', 'Greedy', 'EpsilonGreedy', 'UCB', 'FRRMAB']
+policies = ['Random', 'Greedy', 'EpsilonGreedy', 'UCB', 'FRRMAB', 'Softmax']
 
 [algorithm.frrmab]
 # Algorithm Configuration for FRRMAB
@@ -46,6 +46,11 @@ rnfail = { epsilon = 0.3 }
 # Algorithm Configuration for LinUCB
 timerank = { alpha = 0.5 }
 rnfail = { alpha = 0.5 }
+
+[algorithm.softmax]
+# Algorithm Configuration for Softmax
+timerank = { temperature = 0.5 }
+rnfail = { temperature = 0.3 }
 
 [algorithm.swlinucb]
 # Algorithm Configuration for SWLinUCB
